--- a/styles/header.less
+++ b/styles/header.less
@@ -24,7 +24,7 @@
     background-position: center;
   }
 
-  ul.searchBoxNav {
+  ul.search-box-nav {
     margin: 0.6rem 0;
 
     .input-group-addon {
